compiler/src/test/resources/amyc/typer/failing/ArithError1.amy
module ArithError1
  1 + true
end ArithError1
